--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
 <body>
   <main class="page-content" aria-label="Content">
     <div id="bg" style="margin: 0;
-  padding: 0; background: url({{site.url}}/images/trailhead_logo_bw.png) center fixed no-repeat;
+  padding: 0; background: url({{site.url}}/images/trailhead_logo_bw.png) top fixed no-repeat;
     -moz-background-size: cover;
-    background-size: cover; opacity:0.1">
+    background-size: contain; opacity:0.1">
   </div>
 
 <div id="container">
