--- a/assets/main.css
+++ b/assets/main.css
@@ -2,7 +2,7 @@ head {
 }
 
 body {
-	border-top: 6px solid #000;
+	/* border-top: 6px solid #000; */
 	color: transparent;
 	margin: 0 auto 6px;
 	padding: 0;
